# An-Enterprise-Knowledge-Assistant

./: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml
assignment_anthrasync/: pdf.py  requirements.txt  tmp_rag_inspect.py  tmp_rag_test.py
assignment_anthrasync/backend/: api.py
assignment_anthrasync/chromastore/: chroma.sqlite3
assignment_anthrasync/frontend/: app_ui.py
backend/: config.py  rag_engine.py
