[project]
name = "assignment-anthrasync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.3.27",
    "fastapi>=0.110.0",
    "fpdf>=1.7.2",
    "fpdf2>=2.8.7",
    "httpx<0.28.0",
    "langchain>=0.0.374",
    "langchain-classic>=0.0.3",
    "langchain-community>=0.0.34",
    "langchain-openai>=0.0.16",
    "langchain-text-splitters>=0.0.8",
    "openai>=1.0.0",
    "pydantic>=2.9.0",
    "pypdf>=3.20.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.25.0",
]
